--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HTKPortal</string>
     <string name="login_btngiris">Giriş</string>
+    <string name="rationale_camera">Bu işlem için kamera izni gerekiyor.</string>
 </resources>
