--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
-    <string name="app_name">HTKPortal</string>
+    <string name="app_name">HKT Portal</string>
     <string name="login_btngiris">Giriş</string>
     <string name="rationale_camera">Bu işlem için kamera izni gerekiyor.</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Ana Sayfa</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="AddKnn">Knn Ekle</string>
+    <string name="ReadBarcode">Barkod oku</string>
+    <string name="Login">Giriş Yap</string>
 </resources>
