--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_refresh">Ayarlar</string>
     <string name="AddKnn">Knn Ekle</string>
     <string name="ReadBarcode">Barkod oku</string>
     <string name="Login">Giriş Yap</string>
